--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,12 @@
 [*]
 charset = utf-8
-end_of_line = crlf
+end_of_line = lf
 indent_size = 4
 indent_style = space
 insert_final_newline = false
 max_line_length = 120
 tab_width = 4
-ij_continuation_indent_size = 8
+ij_continuation_indent_size = 4
 ij_formatter_off_tag = @formatter:off
 ij_formatter_on_tag = @formatter:on
 ij_formatter_tags_enabled = false
@@ -24,7 +24,7 @@ ij_java_align_multiline_assignment = false
 ij_java_align_multiline_binary_operation = false
 ij_java_align_multiline_chained_methods = false
 ij_java_align_multiline_deconstruction_list_components = true
-ij_java_align_multiline_extends_list = false
+ij_java_align_multiline_extends_list = true
 ij_java_align_multiline_for = true
 ij_java_align_multiline_method_parentheses = false
 ij_java_align_multiline_parameters = true
@@ -33,8 +33,8 @@ ij_java_align_multiline_parenthesized_expression = false
 ij_java_align_multiline_records = true
 ij_java_align_multiline_resources = true
 ij_java_align_multiline_ternary_operation = false
-ij_java_align_multiline_text_blocks = false
-ij_java_align_multiline_throws_list = false
+ij_java_align_multiline_text_blocks = true
+ij_java_align_multiline_throws_list = true
 ij_java_align_subsequent_simple_methods = false
 ij_java_align_throws_keyword = false
 ij_java_align_types_in_multi_catch = true
@@ -128,7 +128,7 @@ ij_java_keep_blank_lines_in_code = 1
 ij_java_keep_blank_lines_in_declarations = 1
 ij_java_keep_builder_methods_indents = false
 ij_java_keep_control_statement_in_one_line = true
-ij_java_keep_first_column_comment = false
+ij_java_keep_first_column_comment = true
 ij_java_keep_indents_on_empty_lines = false
 ij_java_keep_line_breaks = true
 ij_java_keep_multiple_expressions_in_one_line = false
@@ -149,8 +149,8 @@ ij_java_method_annotation_wrap = split_into_lines
 ij_java_method_brace_style = end_of_line
 ij_java_method_call_chain_wrap = off
 ij_java_method_parameters_new_line_after_left_paren = false
-ij_java_method_parameters_right_paren_on_new_line = false
-ij_java_method_parameters_wrap = off
+ij_java_method_parameters_right_paren_on_new_line = true
+ij_java_method_parameters_wrap = normal
 ij_java_modifier_list_wrap = false
 ij_java_multi_catch_types_wrap = normal
 ij_java_names_count_to_use_import_on_demand = 3
@@ -164,7 +164,7 @@ ij_java_parentheses_expression_right_paren_on_new_line = false
 ij_java_place_assignment_sign_on_next_line = false
 ij_java_prefer_longer_names = true
 ij_java_prefer_parameters_wrap = false
-ij_java_record_components_wrap = normal
+ij_java_record_components_wrap = split_into_lines
 ij_java_repeat_synchronized = true
 ij_java_replace_instanceof_and_cast = false
 ij_java_replace_null_check = true
@@ -244,7 +244,7 @@ ij_java_spaces_around_type_bounds_in_type_parameters = true
 ij_java_spaces_around_unary_operator = false
 ij_java_spaces_within_angle_brackets = false
 ij_java_spaces_within_annotation_parentheses = false
-ij_java_spaces_within_array_initializer_braces = true
+ij_java_spaces_within_array_initializer_braces = false
 ij_java_spaces_within_braces = false
 ij_java_spaces_within_brackets = false
 ij_java_spaces_within_cast_parentheses = false
